<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/touchZone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guide"
        android:layout_margin="20dp"
        android:background="@color/rightGray">

        <View
            android:id="@+id/touch_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.65"/>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_margin="30dp">

        <Button
            android:id="@+id/leftTop_btn"
            android:text="@string/left_top"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/top_btn"
            android:text="@string/top"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/rightTop_btn"
            android:text="@string/right_top"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/left_btn"
            android:text="@string/left"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/center_btn"
            android:text="@string/center"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/right_btn"
            android:text="@string/right"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/leftBottom_btn"
            android:text="@string/left_bottom"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/bottom_btn"
            android:text="@string/bottom"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/rightBottom_btn"
            android:text="@string/right_bottom"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textSize="30sp"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>